# Robin-agent

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  FORK_NOTES.md  LICENSE  README.md  RESUME.md  RUNBOOK.md  SECURITY.md  cli-config.yaml.example  cli.py  constraints-termux.txt  docker-compose.yml  flake.nix  mcp_serve.py  mini_swe_runner.py  model_tools.py  package-lock.json  package.json  pyproject.toml  rl_cli.py  robin  robin_constants.py  robin_logging.py  robin_state.py  robin_time.py  run_agent.py  run_agent.py.bak.20260501-pre-router  setup-robin.sh  strip_backends.py  strip_platforms.py  test_llm.py  test_openai_url.py  test_resolve.py  toolsets.py  trajectory_compressor.py  utils.py
.github/workflows/: tests.yml
.plans/: openai-api-server.md  streaming-support.md
acp_adapter/: __init__.py  auth.py  entry.py  permissions.py  server.py  session.py  tools.py
acp_registry/: agent.json
agent/: account_usage.py  anthropic_adapter.py  auxiliary_client.py.bak.20260501-pre-router  bedrock_adapter.py  context_compressor.py  context_engine.py  context_references.py  copilot_acp_client.py  credential_pool.py  credential_sources.py  curator.py  display.py  file_safety.py  gemini_cloudcode_adapter.py  gemini_native_adapter.py  google_code_assist.py  google_oauth.py  iftv_rate_guard.py  image_gen_provider.py  image_gen_registry.py  insights.py  memory_manager.py  memory_provider.py  model_metadata.py  models_dev.py  onboarding.py  prompt_builder.py  redact.py  shell_hooks.py  skill_commands.py  skill_preprocessing.py  skill_utils.py
agent/routing/: dispatch_hook.py  heuristic_router.py  intent_router.py
agent/transports/: chat_completions.py
cron/: __init__.py  jobs.py  scheduler.py
docker/: SOUL.md  entrypoint.sh
gateway/: __init__.py  channel_directory.py  config.py  delivery.py  display_config.py  hooks.py  mirror.py  pairing.py  platform_registry.py  restart.py  run.py  runtime_footer.py  session.py  session_context.py  status.py  sticker_cache.py  stream_consumer.py  whatsapp_identity.py
optional-skills/: DESCRIPTION.md
optional-skills/migration/: DESCRIPTION.md
plugins/disk-cleanup/: README.md  __init__.py  disk_cleanup.py  plugin.yaml
plugins/google_meet/: README.md  SKILL.md  __init__.py  audio_bridge.py  cli.py  meet_bot.py  plugin.yaml  process_manager.py  tools.py
plugins/memory/: __init__.py
plugins/robin-achievements/: LICENSE  README.md
plugins/spotify/: __init__.py  client.py  plugin.yaml  tools.py
plugins/strike-freedom-cockpit/: README.md
robin_cli/: __init__.py  _parser.py  auth.py  auth_commands.py  azure_detect.py  backup.py  banner.py  browser_connect.py  callbacks.py  claw.py  cli_output.py  clipboard.py  commands.py  completion.py  config.py  copilot_auth.py  cron.py  curator.py  curses_ui.py  debug.py  default_soul.py  doctor.py  dump.py  env_loader.py  fallback_cmd.py  gateway.py  hooks.py  iftv_subscription.py  logs.py  main.py  mcp_config.py  memory_setup.py  model_catalog.py  model_normalize.py  model_switch.py  models.py  oneshot.py  pairing.py  platforms.py  plugins.py  (+19 more)
scripts/: backup_robin.sh  build_model_catalog.py  build_skills_index.py  discord-voice-doctor.py  install-git-hooks.sh  install.cmd  install.ps1  install.sh  kill_modal.sh  profile-tui.py  robin-gateway  robin_logrotate.conf  run_tests.sh
skills/dogfood/: SKILL.md
tests/: conftest.py  test_atomic_replace_symlinks.py  test_cli_manual_compress.py  test_cli_skin_integration.py  test_empty_model_fallback.py  test_ipv4_preference.py  test_mcp_serve.py  test_minimax_model_validation.py  test_minimax_oauth.py  test_model_tools.py  test_plugin_skills.py  test_project_metadata.py  test_robin_constants.py  test_robin_home_git_guard.py  test_robin_logging.py  test_robin_state.py  test_subprocess_home_isolation.py  test_timezone.py  test_toolsets.py  test_trajectory_compressor.py  test_transform_tool_result_hook.py  test_tui_gateway_server.py  test_utils_truthy_values.py  test_yuanbao_integration.py  test_yuanbao_markdown.py  test_yuanbao_proto.py  voice_mvp_test.py
tools/: __init__.py  approval.py  browser_camofox.py  browser_camofox_state.py  browser_cdp_tool.py  browser_supervisor.py  browser_tool.py  budget_config.py  checkpoint_manager.py  code_execution_tool.py  credential_files.py  cronjob_tools.py  debug_helpers.py  delegate_tool.py  discord_tool.py  env_passthrough.py  file_operations.py  file_state.py  file_tools.py  image_generation_tool.py  interrupt.py  managed_tool_gateway.py  mcp_oauth.py  mcp_oauth_manager.py  mcp_tool.py  memory_tool.py  osv_check.py  process_registry.py  registry.py  rl_training_tool.py  send_message_tool.py  session_search_tool.py  skill_manager_tool.py  skill_usage.py  skills_guard.py  skills_hub.py  skills_sync.py  skills_tool.py  terminal_tool.py  tirith_security.py  (+12 more)
tui_gateway/: entry.py  event_publisher.py  server.py  slash_worker.py  transport.py
ui-tui/: README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.build.json
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+883 files in other folders)
